added events for Pointer Up/Down

--- a/Runtime/com.ezygamers.objectmovementprompt.scripts.asmdef
+++ b/Runtime/com.ezygamers.objectmovementprompt.scripts.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "com.ezygamers.objectmovementprompt.scripts",
     "rootNamespace": "com.ezygamers.objectmovementprompt.scripts",
-    "references": [
-        "leantweenhelperscripts"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
